--- a/package.json
+++ b/package.json
@@ -31,5 +31,13 @@
   },
   "dependencies": {
     "loader-utils": "^0.2.14"
+  },
+  "devDependencies": {
+    "babel-eslint": "^6.0.4",
+    "eslint": "^2.10.0",
+    "eslint-config-stipsan": "^1.0.1",
+    "eslint-plugin-import": "^1.8.0",
+    "eslint-plugin-jsx-a11y": "^1.2.0",
+    "eslint-plugin-react": "^5.1.1"
   }
 }
