--- a/package.json
+++ b/package.json
@@ -27,17 +27,17 @@
   "homepage": "https://github.com/stipsan/uikit-loader#readme",
   "peerDependencies": {
     "style-loader": "*",
-    "webpack": "1.13.2"
+    "webpack": "1.*"
   },
   "dependencies": {
-    "loader-utils": "^0.2.14"
+    "loader-utils": "0.2.15"
   },
   "devDependencies": {
-    "babel-eslint": "^6.1.2",
-    "eslint": "^3.4.0",
-    "eslint-config-stipsan": "^1.1.1",
-    "eslint-plugin-import": "^1.14.0",
-    "eslint-plugin-jsx-a11y": "^2.2.0",
-    "eslint-plugin-react": "^6.2.0"
+    "babel-eslint": "6.1.2",
+    "eslint": "3.4.0",
+    "eslint-config-stipsan": "1.1.1",
+    "eslint-plugin-import": "1.14.0",
+    "eslint-plugin-jsx-a11y": "2.2.0",
+    "eslint-plugin-react": "6.2.0"
   }
 }
